# aloy

./: .travis.yml  Cargo.toml  README.md  build.rs  config.example.json
src/: configuration_loader.rs  main.rs  watcher.rs
src/configuration/: configuration_loader.rs
src/watcher/: file_identifier.rs  webservice.rs
