[package]
name = "aloy"
version = "0.1.0"
authors = ["Andy Pfister <andy.pfister@simplificator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rustc_version = "0.2.3"

[dependencies]
crossbeam-channel = "0.4.2"
lazy_static = "1.4.0"
notify = "4.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "1.1.1", features = ["json"] }
